# ectool

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md
getopt/: CMakeLists.txt  getopt.h  getopt_shim.cpp  optparser.cpp  optparser.h
include/: common.h  compile_time_macros.h  config.h  ec_commands.h  ec_version.h  framework_oem_ec_commands.h  gpio_signal.h  panic.h  task_id.h  usb_pd_tcpm.h  win32_shim.h
include/win32/sys/: io.h
src/: CMakeLists.txt  comm-host.cc  comm-host.h  comm-lpc.cc  comm-win32-ring0.cc  comm-win32-ring0.h  comm-win32.cc  comm-winring0.cc  ectool.cc  ectool.rc  ectool_keyscan.cc  ectool_lib.cc  misc_util.cc
src/lock/: file_lock.cc  ipc_lock.h  win32_mutex_lock.cc
